--- a/tests/runner.html
+++ b/tests/runner.html
@@ -13,6 +13,7 @@
 
     <form action="" id="form">
         <input type="text" name="username">
+        <input type="text" name="username2">
         <input type="submit">
     </form>
 
